upadate dream big section

--- a/index.htm
+++ b/index.htm
@@ -9,15 +9,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange">Shanto</span> Website</h1>
             <h3>World Class Professional Web Developer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo rerum possimus magnam magni delectus, dolorum itaque iure perspiciatis nam odio voluptatum ab, non consequatur vero illo, earum temporibus saepe atque similique eaque rem doloribus commodi? Molestiae eaque, consequuntur ducimus voluptatum porro sint facere reiciendis possimus ullam earum accusantium placeat illo.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/irfan-ullah-munna-742a8014b/">Hire Me</a>
         </div>
         <div class="half-width">
             <img src="images/profile.png" alt="">
+        </div>
+    </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/profile.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>World Number 1 Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas quis, expedita architecto veritatis voluptatum aut dolorum doloribus ipsum neque cumque mollitia ab porro veniam repellendus vel corrupti error, velit numquam! Repellendus amet quod saepe ad, nesciunt voluptatem maiores quidem accusantium ducimus, porro exercitationem quam repellat quisquam nobis unde ea obcaecati.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/Shanto659/">Visit My Profile</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="half-width">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange">2021-Present | Pro Level Web Developer</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab tempore ullam dolore, atque natus earum doloremque, aspernatur nisi corrupti, incidunt optio necessitatibus esse cupiditate. Recusandae neque blanditiis reiciendis fugit accusamus!</p>
+        </div>
+        <div class="half-width">
+            <h2>Beginer Web Developer</h2>
+            <h3 class="orange">2019-2020 | Basic Level Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi corporis exercitationem natus atque. Modi ullam, fugiat odio accusantium ex cumque iste blanditiis aliquam praesentium sunt eaque reprehenderit libero, saepe ipsum?</p>
         </div>
     </section>
 </body>
