--- a/index.htm
+++ b/index.htm
@@ -34,16 +34,19 @@
     </section>
     <section class="experience-area">
         <h1>Experiences</h1>
-        <div class="half-width">
+        <div class="half-width box-style" id="full-stack">
             <h2>Full Stack Web Developer</h2>
             <h3 class="orange">2021-Present | Pro Level Web Developer</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab tempore ullam dolore, atque natus earum doloremque, aspernatur nisi corrupti, incidunt optio necessitatibus esse cupiditate. Recusandae neque blanditiis reiciendis fugit accusamus!</p>
         </div>
-        <div class="half-width">
+        <div class="half-width box-style" id="half-stack">
             <h2>Beginer Web Developer</h2>
             <h3 class="orange">2019-2020 | Basic Level Web Developer</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi corporis exercitationem natus atque. Modi ullam, fugiat odio accusantium ex cumque iste blanditiis aliquam praesentium sunt eaque reprehenderit libero, saepe ipsum?</p>
         </div>
     </section>
+    <footer class="footer">
+        <p>&copy; 2021 SHANTO is All rights reserved.</p>
+    </footer>
 </body>
 </html>
